# restic-monitor

./: .gitignore  LICENSE.txt  README.md  main.py  main.spec  pyproject.toml
example_configs/: env.json  settings.json
restic_monitor/: appdir.py  idle.py  lastline.py  logutils.py  main.py  messagebox.py  monitor.py  openshell.py  pystray_patch.py  tray.py
